tests/cases/compiler-development/artifact/errors/diagnostic-generic-aggregate-nested-mismatch.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected Box[Box[Token]], got Box[Box[Span]]" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-aggregate-nested-mismatch.ari" display="tests/cases/generics/errors/generic-aggregate-nested-mismatch.ari" bytes=320
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-aggregate-nested-mismatch.ari" line=21 column=17 end_line=21 end_column=22 byte_start=310 byte_end=315 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-aggregate-nested-mismatch.ari:21:17\n    |\n 21 |   return accept(value);\n    |                 ^^^^^"
